--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "example",
-  "app": "",
+  "App": "",
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
     "dev": "webpack -d --watch",
